# MCP-Ambari-API

./: .env.example  .env.smithery  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.MCP-Server  Dockerfile.MCPO-Proxy  Dockerfile.OpenWebUI-MCPO-Proxy  Dockerfile.for-OpenWebUI.bak  Dockerfile.smithery.ai  README.md  USER_MANAGEMENT_IMPLEMENTATION.md  _config.yml  build-mcp-server-docker-image.sh  build-mcpo-server-docker-image.sh  docker-compose.yml  index.md  main.py  make-git-tag-latest.sh  mcp-config.json  mcp-config.json.bak  mcp-config.json.http  mcp-config.json.local  mcp-config.json.pypi  mcp-config.json.stdio  pyproject.toml  run-mcp-inspector-local.sh  run-mcp-inspector-pypi.sh  smithery.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  pypi-publish.yml
_includes/: google-analytics.html
_layouts/: default.html
scripts/: mcp-server-docker-cmd.sh  mcp-server-docker-cmd.smithery.sh
src/mcp-ambari-api/: __init__.py
src/mcp_ambari_api/: ambari_api.py  functions.py  mcp_main.py  prompt_template.md
tests/: test_user_tools.py
tools/: ambari_api.py
