[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-ambari-api"
dynamic = ["version"]
description = "Model Context Protocol (MCP) server for Apache Ambari API integration. Provides comprehensive tools for managing Hadoop clusters including service operations, configuration management, status monitoring, and request tracking."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastmcp>=2.12.3",
    "setuptools-scm>=10.0.5",
    "pre-commit>=4.6.0",
]

[project.scripts]
mcp-ambari-api = "mcp_ambari_api.mcp_main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_ambari_api*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
### version_scheme options:
###   uncommented: raises LookupError (uses fallback_version) when not on a tag
###   commented-out (default guess-next-dev): auto-generates e.g. 1.0.1.dev2+gabcdef for commits after a tag
# version_scheme = "no-guess-dev"
### local_scheme options:
###   node-and-date      (default)  e.g. 1.0.1.dev2+gabcdef.d20260430
###   node-and-timestamp            e.g. 1.0.1.dev2+gabcdef.1746000000
###   dirty-tag                     e.g. 1.0.1.dev2+dirty (only when working tree is dirty)
###   no-local-version              e.g. 1.0.1.dev2 (omits local part entirely; only this option allows non-tagged commits to be uploaded to PyPI)
local_scheme = "node-and-date"
fallback_version = "0.0.0"

[tool.setuptools.package-data]
# Ensure non-Python resource files ship inside the wheel
# You can broaden to ["*.md"] if more markdown resources are added later.
mcp_ambari_api = ["prompt_template.md"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]
